Added issue 2 level implementation of Operator Console
